# concrete-datastore

./: .gitattributes  .gitignore  .rcpylint  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQS-en.md  FAQS.md  MANIFEST.in  README-en.md  README.md  celerybeat-schedule  codecov.yml  event.ics  mkdocs.yml  setup.cfg
.github/workflows/: check-bandit.yml  check-black.yml  check-lint.yml  check-tests.yml
concrete_datastore/: __init__.py  cli.py
concrete_datastore/admin/: admin.py  admin_form.py  admin_models.py  admin_site.py
concrete_datastore/authentication/: auth.py  mfa.py  oauth2_utils.py
concrete_datastore/concrete/: __init__.py  apps.py  constants.py  custom_image_field.py  meta.py  middleware.py  models.py  password.py  urls.py  views.py
concrete_datastore/interfaces/: csv.py  openapi_schema_generator.py  yaml_renderer.py
concrete_datastore/parsers/: constants.py  exceptions.py  fields.py  helpers.py  loaders.py  meta.py  models.py  parsers.py  validators.py
concrete_datastore/routes/: forms.py  urls.py  views.py
concrete_datastore/settings/: base.py  celery.py  development.py  unittest_settings.py  utils.py  wsgi.py
development/: README.md  cli.py  settings.py  wsgi.py
development/datamodel/: sample-data-model.yml  sample-datamodel.json
docs/: api-routes.md  authentication.md  datamodel-yml.md  demo.md  filters.md  index.md  permissions.md  roles.md
docs/assets/: sample-datamodel.yml
tests/: README.md  fake_yaml_content.py  test_admin_forms.py  test_datetime.py  test_fields_validation.py  test_get_level.py  test_imports.py  test_init_app.py  test_instance_permission.py  test_load_datamodel.py  test_models.py  test_remove_file_deleted_instance.py  test_serializers.py  test_simultaneous_sessions.py  unittest_settings.py  utils.py
tests/datamodel/: unittest-datamodel.yaml
tests/migrations/: 0001_initial.py  0002_auto_20200218_1331.py  0003_passwordchangetoken_expiry_date.py  0004_itempack.py  0005_auto_20200526_1210.py  0006_publicmodelmanagerretrieve.py  0007_project_ip_address.py  0008_project_gps_address.py  0009_auto_20210304_1640.py  0010_auto_20210915_0901.py  0011_alter_jsonfield_json_field.py  0011_secureconnectcode.py  0012_auto_20221115_0644.py  0013_instancepermission_systemversion.py  0013_project_storage_url.py  0014_auto_20230802_1517.py  0014_systemversion_version.py
tests/tests_admin_site/: test_admin_view.py
tests/tests_api_v1_0/: _test_api_v1_0_reverse_relation_serializer.py  test_admin_models.py  test_api_timezone.py  test_api_v1_0_CRUD.py  test_api_v1_0_Modify_Project.py  test_api_v1_0_UTC.py  test_api_v1_0_auth.py  test_api_v1_0_auth_change_password.py  test_api_v1_0_auth_password_expiry.py  test_api_v1_0_cloisonnement_additionnal_filtering.py  test_api_v1_0_cloisonnement_admin.py  test_api_v1_0_cloisonnement_exclude.py  test_api_v1_0_cloisonnement_multiple.py  test_api_v1_0_creation_avec_cloisonnement.py  test_api_v1_0_creation_minimum_level.py  test_api_v1_0_crud_minimum_level.py  test_api_v1_0_email.py  test_api_v1_0_filter_user_by_level.py  test_api_v1_0_jsonfield.py  test_api_v1_0_nested_serializer.py  test_api_v1_0_ordering.py  test_api_v1_0_paginated_views.py  test_api_v1_0_permission.py  test_api_v1_0_permission2.py  test_api_v1_0_permission_group.py  test_api_v1_0_register.py  test_api_v1_0_reset_password.py  test_api_v1_0_serializer_scopes.py  test_api_v1_0_timestamp.py  test_api_v1_0_token_expiry.py  test_api_v1_0_unique_together.py  test_api_v1_0_update_user_with_scope.py  test_api_v1_0_upload.py  test_api_v1_0_user.py  test_api_v1_0_user_all.py  test_api_v1_0_user_level.py  test_api_v1_0_user_me.py  test_api_v1_0_wrong_entity_uid.py  test_filters.py  test_mail_confirmation.py  (+4 more)
tests/tests_api_v1_1/: _test_api_v1_1_reverse_relation_serializer.py  test_admin_models.py  test_api_timezone.py  test_api_v1_0_CRUD.py  test_api_v1_0_Modify_Project.py  test_api_v1_0_auth.py  test_api_v1_0_auth_change_password.py  test_api_v1_0_cloisonnement_admin.py  test_api_v1_0_cloisonnement_exclude.py  test_api_v1_0_creation_avec_cloisonnement.py  test_api_v1_0_crud_minimum_level.py  test_api_v1_0_filter_user_by_level.py  test_api_v1_0_ordering.py  test_api_v1_0_paginated_views.py  test_api_v1_0_permission.py  test_api_v1_0_permission_group.py  test_api_v1_0_register.py  test_api_v1_0_reset_password.py  test_api_v1_0_serializer_scopes.py  test_api_v1_0_token_expiry.py  test_api_v1_0_unique_together.py  test_api_v1_0_upload.py  test_api_v1_0_user.py  test_api_v1_0_user_level.py  test_api_v1_0_wrong_entity_uid.py  test_api_v1_1_CRUD.py  test_api_v1_1_LDAPLogin_api_view.py  test_api_v1_1_UTC.py  test_api_v1_1_auth.py  test_api_v1_1_auth_by_token_in_url.py  test_api_v1_1_auth_change_password.py  test_api_v1_1_auth_mfa.py  test_api_v1_1_auth_password_expiry.py  test_api_v1_1_blocked_users.py  test_api_v1_1_change_pwd_ways.py  test_api_v1_1_cloisonnement_additionnal_filtering.py  test_api_v1_1_cloisonnement_multiple.py  test_api_v1_1_creation_minimum_level.py  test_api_v1_1_datetime_logger_middleware.py  test_api_v1_1_delete_protected.py  (+35 more)
tests/tests_change_user_scope/: tests_staff_change_user_scope.py
tests/tests_command_manager/: test_create_superuser.py  test_create_superuser_with_email.py  test_get_stats_models_count.py  test_reset_password.py
tests/tests_permissions/: test_divider_update.py  test_fix_bug_79.py  test_level.py  test_permissions_with_user_level.py  test_retrieve_permissions.py  test_retrieve_permissions_fail.py  test_update_manager.py
tests/tests_permissions_scope_removed/: tests_permission_scope_removed.py
tests/tests_query/: test_timestamp.py
tests/tests_register_process/: test_register_process.py
(+95 files in other folders)
