[metadata]
name = concrete-datastore
version = attr: concrete_datastore.__version__
author = Netsach
author_email = contact@netsach.org
description = A highly versatile REST Datastore
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GENERAL PUBLIC LICENSE Version 3
license-file = LICENSE
home-page = https://datastore.microservices.rest
project_urls =
    Bug Tracker = https://github.com/Netsach/concrete-datastore/issues
    Documentation = https://github.com/Netsach/concrete-datastore/blob/master/README.md
    Source Code = https://github.com/Netsach/concrete-datastore/
classifiers =
    Programming Language :: Python :: 3.6

[options]
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    # Django
    Django>=2.2,<2.3
    django-cors-headers>=1.3.1,<2
    django-extensions>=1.7,<2
    django-filter>=2.1.0,<3
    django-otp>=0.7.0,<1
    djangorestframework==3.10.2
    social-auth-app-django>=3.1.0,<3.2
    social-auth-core>=3.2.0,<3.3
    # DB Postgres
    psycopg2-binary>=2.8.1,<3
    # Utils
    concrete-mailer>=2.13.0,<3
    pendulum>=0.8,<1
    Pillow>=4.3,<5
    pytz>=2018.5
    requests>=2.13.0,<3
    pyyaml>=5.1.2,<6
    uritemplate>=3.0.0,<4
    # Datamodel parser
    six>=1.12,<2
    python-slugify>=3.0.3,<4
    # Plugins
    celery>=4.3,<5
    redis>=3.2,<4

[options.entry_points]
console_scripts =
    django = development.cli:django

[options.extras_require]
docs=
    mkdocs>=1.0.4,<2
    mkdocs-material>=4.4.3,<4.5
dev =
    ipython
    django-debug-toolbar
tests =
    mock
    pytest-django
    pytest-cov
    pytest
    codecov
security =
    bandit
quality =
    pylint
    black
full=
    ipython
    django-debug-toolbar
    mock
    pytest-django
    pytest-cov
    pytest
    codecov
    bandit
    pylint
    black

[coverage:report]
# With regex
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    skip-test-coverage
    # Custom for block
    PragmaContextNoCover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug
    if settings\.DEBUG

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError
    raise RuntimeError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:

[coverage:run]
omit =
    */tests/*

include =
    *concrete_datastore*


[coverage:html]
title = concrete-datastore - Code coverage
directory = ./tests/coverage/
